--- a/src/app/cases/case/case.component.html
+++ b/src/app/cases/case/case.component.html
@@ -2,7 +2,7 @@
 <!-- <h1 class="mt-5 mb-5 text-3xl font-bold text-center">{{ case.title }}</h1> -->
 
 <section
-  class="w-3/4 md:w-1/2 xl:w-1/3 mx-auto flex flex-wrap justify-center gap-4"
+  class="w-3/4 md:w-1/2 xl:w-1/3 mx-auto my-10 flex flex-wrap justify-center gap-4"
 >
   @for (subCase of case.data; track subCase._id;) {
   <app-case-card
