Fix cases table pagination

--- a/src/app/cases/cases/cases.component.html
+++ b/src/app/cases/cases/cases.component.html
@@ -6,7 +6,10 @@
   [paginator]="true"
   [rows]="10"
   [value]="cases()"
+  [totalRecords]="totalCases()"
+  [lazy]="true"
   styleClass="w-3/4 md:w-1/2 mt-5 mx-auto"
+  (onPage)="pageChange($event)"
 >
   <ng-template pTemplate="caption">
     <div class="flex justify-center">
